--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,3 +1,94 @@
-/* Your styles go here */
-@import "bootstrap/scss/bootstrap.scss";
-@import "bootstrap-icons/font/bootstrap-icons.css";
+@import "./_custom.scss";
+@import "./_hero.scss";
+@import "./_how_it_works.scss";
+@import "./_advantages.scss";
+@import "./_testimonials.scss";
+@import "./_selling_point.scss";
+@import "./_recent_purchases.scss";
+@import "./_faq.scss";
+@import "./_footer.scss";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  line-height: 1.6;
+  color: $secondary-color;
+}
+
+.btn-primary {
+  @include button-style($primary-color, darken($primary-color, 10%), darken($primary-color, 25%));
+}
+
+// ----------- Nav and Header Styling ------------
+.main-header {
+  background-color: $secondary-color;
+  padding: 15px 0;
+  min-height: 93px;
+
+  .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
+  }
+
+  .logo {
+    height: 65px;
+  }
+
+  .navbar {
+    background-color: $secondary-color;
+
+    li {
+      position: relative;
+
+      a {
+        color: #ffffff;
+        text-decoration: none;
+        font-size: 1rem;
+        padding: 10px;
+        transition: color 0.3s ease;
+
+        &:hover {
+          color: $primary-color;
+        }
+      }
+
+      &:hover::after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        background-color: $primary-color;
+        animation: underline 0.3s ease forwards;
+      }
+    }
+  }
+}
+
+@keyframes underline {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .main-header {
+    .container {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+}
